// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiCombobox renders 1`] = `


.pounce-8 {
  position: relative;
}

.pounce-4 {
  min-height: 47px;
  overflow: auto;
  position: relative;
  border: 1px solid;
  -webkit-transition: border-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: border-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  background-color: transparent;
  border-radius: 4px;
  border-color: #3E516B;
}

.pounce-4:hover {
  border-color: #0081C5;
}

.pounce-4:focus-within {
  border-color: #0081C5;
}

.pounce-4:focus-within span {
  opacity: 1;
  visibility: visible;
}

.pounce-4:focus-within label {
  font-weight: 500;
  -webkit-transform: translate(6px, 4px) scale(0.65);
  -moz-transform: translate(6px, 4px) scale(0.65);
  -ms-transform: translate(6px, 4px) scale(0.65);
  transform: translate(6px, 4px) scale(0.65);
}

.pounce-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding-left: 12px;
  padding-right: 40px;
  padding-top: 19px;
  padding-bottom: 2px;
}

.pounce-1 {
  max-width: 100%;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  position: initial;
}

.pounce-0 {
  width: 100%;
  height: 100%;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 20px;
  padding-bottom: 8px;
  position: absolute;
  color: #F6F6F6;
  font-size: 0.875rem;
  font-weight: 500;
  background-color: transparent;
  border: 0;
  cursor: pointer;
  top: 0;
  left: 0;
}

.pounce-0::-webkit-input-placeholder {
  opacity: 0;
  color: #F6F6F6;
  -webkit-transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  font-weight: 500;
}

.pounce-0::-moz-placeholder {
  opacity: 0;
  color: #F6F6F6;
  -webkit-transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  font-weight: 500;
}

.pounce-0:-ms-input-placeholder {
  opacity: 0;
  color: #F6F6F6;
  -webkit-transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  font-weight: 500;
}

.pounce-0::placeholder {
  opacity: 0;
  color: #F6F6F6;
  -webkit-transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  font-weight: 500;
}



.pounce-0:focus::-webkit-input-placeholder {
  opacity: 0.4;
}

.pounce-0:focus::-moz-placeholder {
  opacity: 0.4;
}

.pounce-0:focus:-ms-input-placeholder {
  opacity: 0.4;
}

.pounce-0:focus::placeholder {
  opacity: 0.4;
}

.pounce-0:-webkit-autofill {
  -webkit-box-shadow: 0 0 0 30px #192231 inset;
  -webkit-text-fill-color: #F6F6F6;
  border-radius: 4px;
}

.pounce-3 {
  pointer-events: none;
  font-size: 0.875rem;
  padding-left: 16px;
  padding-right: 16px;
  color: #BDBDBD;
  top: 0;
  left: 0;
  position: absolute;
  transform-origin: center left;
  -webkit-transform: translate(0, 14px) scale(1);
  -moz-transform: translate(0, 14px) scale(1);
  -ms-transform: translate(0, 14px) scale(1);
  transform: translate(0, 14px) scale(1);
  -webkit-transition: -webkit-transform 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: transform 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  font-weight: 400;
}

.pounce-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 1;
  position: absolute;
  top: 0;
  bottom: 0;
  right: 8px;
  pointer-events: none;
}

.pounce-6 {
  outline: none;
  line-height: 1;
  border-radius: 4px;
  height: 32px;
  width: 32px;
  cursor: pointer;
  color: #F6F6F6;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: transparent;
  -webkit-transition: all 0.1s linear;
  transition: all 0.1s linear;
}

.pounce-6:focus {
  background-color: rgba(255,255,255,0.1);
}

.pounce-5 {
  display: inline-block;
  vertical-align: sub;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 20px;
  height: 20px;
  color: #FFFFFF;
}

.pounce-9 {
  max-height: 300px;
  max-width: 800px;
}

.pounce-10 {
  position: absolute;
  z-index: 10;
  left: 0px;
  top: 0px;
}

<div>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-0-label"
    class="pounce-11"
    role="combobox"
  >
    <div
      class="pounce-8"
    >
      <div
        aria-disabled="false"
        class="pounce-4"
      >
        <ul
          class="pounce-2"
        >
          <li
            class="pounce-1"
          >
            <input
              aria-autocomplete="list"
              aria-disabled="false"
              aria-invalid="false"
              aria-labelledby="downshift-0-label"
              aria-readonly="true"
              autocomplete="off"
              class="pounce-0"
              id="downshift-0-input"
              placeholder="Select manufacturers"
              readonly=""
              type="text"
              value=""
            />
          </li>
        </ul>
        <label
          class="pounce-3"
          for="downshift-0-input"
          id="downshift-0-label"
        >
          Choose a car manufacturer
        </label>
      </div>
      <div
        class="pounce-7"
      >
        <button
          aria-label="Toggle Menu"
          aria-pressed="false"
          class="pounce-6"
          tabindex="-1"
          type="button"
        >
          <svg
            class="pounce-5"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10L12 15L17 10H7Z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="pounce-10"
    >
      <ul
        aria-labelledby="downshift-0-label"
        class="pounce-9"
        id="downshift-0-menu"
        role="listbox"
      />
    </div>
  </div>
</div>
`;

exports[`MultiCombobox renders with clear all option 1`] = `


.pounce-11 {
  position: relative;
}

.pounce-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding-left: 12px;
  padding-right: 40px;
  padding-top: 19px;
  padding-bottom: 2px;
}

.pounce-4 {
  max-width: 100%;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  position: initial;
}

.pounce-3 {
  width: 100%;
  height: 100%;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 20px;
  padding-bottom: 8px;
  position: absolute;
  color: #F6F6F6;
  font-size: 0.875rem;
  font-weight: 500;
  background-color: transparent;
  border: 0;
  cursor: pointer;
  top: 0;
  left: 0;
}

.pounce-3::-webkit-input-placeholder {
  opacity: 0;
  color: #F6F6F6;
  -webkit-transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  font-weight: 500;
}

.pounce-3::-moz-placeholder {
  opacity: 0;
  color: #F6F6F6;
  -webkit-transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  font-weight: 500;
}

.pounce-3:-ms-input-placeholder {
  opacity: 0;
  color: #F6F6F6;
  -webkit-transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  font-weight: 500;
}

.pounce-3::placeholder {
  opacity: 0;
  color: #F6F6F6;
  -webkit-transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  font-weight: 500;
}



.pounce-3:focus::-webkit-input-placeholder {
  opacity: 0.4;
}

.pounce-3:focus::-moz-placeholder {
  opacity: 0.4;
}

.pounce-3:focus:-ms-input-placeholder {
  opacity: 0.4;
}

.pounce-3:focus::placeholder {
  opacity: 0.4;
}

.pounce-3:-webkit-autofill {
  -webkit-box-shadow: 0 0 0 30px #192231 inset;
  -webkit-text-fill-color: #F6F6F6;
  border-radius: 4px;
}

.pounce-9 {
  outline: none;
  line-height: 1;
  border-radius: 4px;
  height: 32px;
  width: 32px;
  cursor: pointer;
  color: #F6F6F6;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: transparent;
  -webkit-transition: all 0.1s linear;
  transition: all 0.1s linear;
}

.pounce-9:focus {
  background-color: rgba(255,255,255,0.1);
}

.pounce-8 {
  display: inline-block;
  vertical-align: sub;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 20px;
  height: 20px;
  color: #FFFFFF;
}

.pounce-12 {
  max-height: 300px;
  max-width: 800px;
}

.pounce-22 {
  position: absolute;
  z-index: 10;
  left: 0px;
  top: 0px;
}

.pounce-7 {
  min-height: 47px;
  overflow: auto;
  position: relative;
  border: 1px solid;
  -webkit-transition: border-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: border-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  background-color: #23344E;
  border-radius: 4px;
  border-color: #23344E;
}

.pounce-7:hover {
  border-color: #0081C5;
}

.pounce-7:focus-within {
  border-color: #0081C5;
}

.pounce-7:focus-within span {
  opacity: 1;
  visibility: visible;
}

.pounce-7:focus-within label {
  font-weight: 500;
  -webkit-transform: translate(6px, 4px) scale(0.65);
  -moz-transform: translate(6px, 4px) scale(0.65);
  -ms-transform: translate(6px, 4px) scale(0.65);
  transform: translate(6px, 4px) scale(0.65);
}

.pounce-6 {
  pointer-events: none;
  font-size: 0.875rem;
  padding-left: 16px;
  padding-right: 16px;
  color: #BDBDBD;
  top: 0;
  left: 0;
  position: absolute;
  transform-origin: center left;
  -webkit-transform: translate(6px, 4px) scale(0.65);
  -moz-transform: translate(6px, 4px) scale(0.65);
  -ms-transform: translate(6px, 4px) scale(0.65);
  transform: translate(6px, 4px) scale(0.65);
  -webkit-transition: -webkit-transform 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: transform 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  font-weight: 500;
}

.pounce-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 1;
  position: absolute;
  top: 0;
  bottom: 0;
  right: 8px;
  pointer-events: auto;
}

.pounce-21 {
  margin-top: 6px;
  margin-bottom: 6px;
  border: 1px solid;
  border-color: #0081C5;
  border-radius: 4px;
  background-color: #3E516B;
  min-width: 0;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  overflow-x: hidden;
  overflow-y: auto;
  max-height: 300px;
  max-width: 800px;
}

.pounce-14 {
  cursor: pointer;
  font-size: 0.875rem;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-right: 40px;
  padding-left: 16px;
  -webkit-transition: background-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: background-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  position: relative;
  background-color: #3E516B;
  word-break: break-all;
}

.pounce-14[aria-selected=true],
[data-selected]>.pounce-14 {
  background-color: #23344E;
}

.pounce-14::after {
  content: "";
  border: 1px solid;
  border-color: #86A3C3;
  border-radius: 2px;
  position: absolute;
  width: 20px;
  height: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  top: 0;
  right: 16px;
  bottom: 0;
  margin: auto 0;
}

.pounce-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #0081C5;
  border-radius: 2px;
  cursor: default;
  padding-left: 8px;
  padding-right: 8px;
  font-size: 0.75rem;
  font-weight: 500;
  word-break: break-all;
  z-index: 1;
  margin: 4px;
}

.pounce-1 {
  margin-left: 8px;
  cursor: pointer;
  color: #F6F6F6;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: transparent;
  -webkit-transition: all 0.1s linear;
  transition: all 0.1s linear;
}

.pounce-0 {
  display: inline-block;
  vertical-align: sub;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 12px;
  height: 12px;
  color: currentColor;
}

.pounce-13 {
  cursor: pointer;
  font-size: 0.875rem;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-right: 40px;
  padding-left: 16px;
  -webkit-transition: background-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: background-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  position: relative;
  background-color: #1D2A3F;
  word-break: break-all;
}

.pounce-13[aria-selected=true],
[data-selected]>.pounce-13 {
  background-color: #23344E;
}

.pounce-13::after {
  content: url( 'data:image/svg+xml; utf8,<svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 20 18" fill="white"><path d="M7 14.17L2.83 10l-1.41 1.41L7 17 19 5l-1.41-1.42L7 14.17z" /></svg>' );
  border: 1px solid;
  border-color: #0081C5;
  border-radius: 2px;
  position: absolute;
  width: 20px;
  height: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  top: 0;
  right: 16px;
  bottom: 0;
  margin: auto 0;
}

<div>
  <div
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="downshift-2-label"
    aria-owns="downshift-2-menu"
    class="pounce-23"
    role="combobox"
  >
    <div
      class="pounce-11"
    >
      <div
        aria-disabled="false"
        class="pounce-7"
      >
        <ul
          class="pounce-5"
        >
          <li
            class="pounce-2"
            role="tag"
          >
            Toyota
            <button
              aria-label="Remove"
              class="pounce-1"
              type="button"
            >
              <svg
                class="pounce-0"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41L17.59 5L12 10.59L6.41 5L5 6.41L10.59 12L5 17.59L6.41 19L12 13.41L17.59 19L19 17.59L13.41 12L19 6.41Z"
                />
              </svg>
            </button>
          </li>
          <li
            class="pounce-4"
          >
            <input
              aria-autocomplete="list"
              aria-controls="downshift-2-menu"
              aria-disabled="false"
              aria-invalid="false"
              aria-labelledby="downshift-2-label"
              aria-readonly="true"
              autocomplete="off"
              class="pounce-3"
              id="downshift-2-input"
              placeholder=""
              readonly=""
              type="text"
              value=""
            />
          </li>
        </ul>
        <label
          class="pounce-6"
          for="downshift-2-input"
          id="downshift-2-label"
        >
          Choose a car manufacturer
        </label>
      </div>
      <div
        class="pounce-10"
      >
        <button
          aria-label="Toggle Menu"
          aria-pressed="false"
          class="pounce-9"
          tabindex="-1"
          type="button"
        >
          <svg
            class="pounce-8"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 14L12 9L17 14H7Z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="pounce-22"
    >
      <ul
        aria-labelledby="downshift-2-label"
        class="pounce-12"
        id="downshift-2-menu"
        role="listbox"
      />
      <ul
        aria-labelledby="downshift-2-label"
        class="pounce-21"
        id="downshift-2-menu"
        role="listbox"
        style="transform: scale(1, 1); opacity: 1;"
      >
        <li
          aria-disabled="false"
          aria-selected="false"
          class="pounce-13"
          id="downshift-2-item-0"
          role="option"
        >
          Toyota
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="pounce-14"
          id="downshift-2-item-1"
          role="option"
        >
          Ford
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="pounce-14"
          id="downshift-2-item-2"
          role="option"
        >
          Chevrolet
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="pounce-14"
          id="downshift-2-item-3"
          role="option"
        >
          BMW
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="pounce-14"
          id="downshift-2-item-4"
          role="option"
        >
          Mercedes
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="pounce-14"
          id="downshift-2-item-5"
          role="option"
        >
          Hammer
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="pounce-14"
          id="downshift-2-item-6"
          role="option"
        >
          Dodge
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="pounce-14"
          id="downshift-2-item-7"
          role="option"
        >
          Audi
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`MultiCombobox renders with clear all option 2`] = `


.pounce-14 {
  position: relative;
}

.pounce-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding-left: 12px;
  padding-right: 40px;
  padding-top: 19px;
  padding-bottom: 2px;
}

.pounce-7 {
  max-width: 100%;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  position: initial;
}

.pounce-6 {
  width: 100%;
  height: 100%;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 20px;
  padding-bottom: 8px;
  position: absolute;
  color: #F6F6F6;
  font-size: 0.875rem;
  font-weight: 500;
  background-color: transparent;
  border: 0;
  cursor: pointer;
  top: 0;
  left: 0;
}

.pounce-6::-webkit-input-placeholder {
  opacity: 0;
  color: #F6F6F6;
  -webkit-transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  font-weight: 500;
}

.pounce-6::-moz-placeholder {
  opacity: 0;
  color: #F6F6F6;
  -webkit-transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  font-weight: 500;
}

.pounce-6:-ms-input-placeholder {
  opacity: 0;
  color: #F6F6F6;
  -webkit-transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  font-weight: 500;
}

.pounce-6::placeholder {
  opacity: 0;
  color: #F6F6F6;
  -webkit-transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  font-weight: 500;
}



.pounce-6:focus::-webkit-input-placeholder {
  opacity: 0.4;
}

.pounce-6:focus::-moz-placeholder {
  opacity: 0.4;
}

.pounce-6:focus:-ms-input-placeholder {
  opacity: 0.4;
}

.pounce-6:focus::placeholder {
  opacity: 0.4;
}

.pounce-6:-webkit-autofill {
  -webkit-box-shadow: 0 0 0 30px #192231 inset;
  -webkit-text-fill-color: #F6F6F6;
  border-radius: 4px;
}

.pounce-12 {
  outline: none;
  line-height: 1;
  border-radius: 4px;
  height: 32px;
  width: 32px;
  cursor: pointer;
  color: #F6F6F6;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: transparent;
  -webkit-transition: all 0.1s linear;
  transition: all 0.1s linear;
}

.pounce-12:focus {
  background-color: rgba(255,255,255,0.1);
}

.pounce-11 {
  display: inline-block;
  vertical-align: sub;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 20px;
  height: 20px;
  color: #FFFFFF;
}

.pounce-15 {
  max-height: 300px;
  max-width: 800px;
}

.pounce-30 {
  position: absolute;
  z-index: 10;
  left: 0px;
  top: 0px;
}

.pounce-10 {
  min-height: 47px;
  overflow: auto;
  position: relative;
  border: 1px solid;
  -webkit-transition: border-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: border-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  background-color: #23344E;
  border-radius: 4px;
  border-color: #23344E;
}

.pounce-10:hover {
  border-color: #0081C5;
}

.pounce-10:focus-within {
  border-color: #0081C5;
}

.pounce-10:focus-within span {
  opacity: 1;
  visibility: visible;
}

.pounce-10:focus-within label {
  font-weight: 500;
  -webkit-transform: translate(6px, 4px) scale(0.65);
  -moz-transform: translate(6px, 4px) scale(0.65);
  -ms-transform: translate(6px, 4px) scale(0.65);
  transform: translate(6px, 4px) scale(0.65);
}

.pounce-9 {
  pointer-events: none;
  font-size: 0.875rem;
  padding-left: 16px;
  padding-right: 16px;
  color: #BDBDBD;
  top: 0;
  left: 0;
  position: absolute;
  transform-origin: center left;
  -webkit-transform: translate(6px, 4px) scale(0.65);
  -moz-transform: translate(6px, 4px) scale(0.65);
  -ms-transform: translate(6px, 4px) scale(0.65);
  transform: translate(6px, 4px) scale(0.65);
  -webkit-transition: -webkit-transform 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: transform 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  font-weight: 500;
}

.pounce-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 1;
  position: absolute;
  top: 0;
  bottom: 0;
  right: 8px;
  pointer-events: auto;
}

.pounce-29 {
  margin-top: 6px;
  margin-bottom: 6px;
  border: 1px solid;
  border-color: #0081C5;
  border-radius: 4px;
  background-color: #3E516B;
  min-width: 0;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  overflow-x: hidden;
  overflow-y: auto;
  max-height: 300px;
  max-width: 800px;
}

.pounce-23 {
  cursor: pointer;
  font-size: 0.875rem;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-right: 40px;
  padding-left: 16px;
  -webkit-transition: background-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: background-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  position: relative;
  background-color: #3E516B;
  word-break: break-all;
}

.pounce-23[aria-selected=true],
[data-selected]>.pounce-23 {
  background-color: #23344E;
}

.pounce-23::after {
  content: "";
  border: 1px solid;
  border-color: #86A3C3;
  border-radius: 2px;
  position: absolute;
  width: 20px;
  height: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  top: 0;
  right: 16px;
  bottom: 0;
  margin: auto 0;
}

.pounce-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #0081C5;
  border-radius: 2px;
  cursor: default;
  padding-left: 8px;
  padding-right: 8px;
  font-size: 0.75rem;
  font-weight: 500;
  word-break: break-all;
  z-index: 1;
  margin: 4px;
}

.pounce-1 {
  margin-left: 8px;
  cursor: pointer;
  color: #F6F6F6;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: transparent;
  -webkit-transition: all 0.1s linear;
  transition: all 0.1s linear;
}

.pounce-0 {
  display: inline-block;
  vertical-align: sub;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 12px;
  height: 12px;
  color: currentColor;
}

.pounce-21 {
  cursor: pointer;
  font-size: 0.875rem;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-right: 40px;
  padding-left: 16px;
  -webkit-transition: background-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: background-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  position: relative;
  background-color: #1D2A3F;
  word-break: break-all;
}

.pounce-21[aria-selected=true],
[data-selected]>.pounce-21 {
  background-color: #23344E;
}

.pounce-21::after {
  content: url( 'data:image/svg+xml; utf8,<svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 20 18" fill="white"><path d="M7 14.17L2.83 10l-1.41 1.41L7 17 19 5l-1.41-1.42L7 14.17z" /></svg>' );
  border: 1px solid;
  border-color: #0081C5;
  border-radius: 2px;
  position: absolute;
  width: 20px;
  height: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  top: 0;
  right: 16px;
  bottom: 0;
  margin: auto 0;
}

.pounce-20 {
  background-color: #30415C;
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  z-index: 1;
}

.pounce-19 {
  width: 100%;
  font-size: 0.625rem;
  color: #56E3C9;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: transparent;
  -webkit-transition: all 0.1s linear;
  transition: all 0.1s linear;
}

.pounce-19:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.pounce-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-top: 6px;
  padding-bottom: 6px;
  padding-left: 16px;
  padding-right: 16px;
}

.pounce-18>*:not(:last-child) {
  margin-right: 6px;
}

.pounce-16 {
  display: inline-block;
  vertical-align: sub;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 16px;
  height: 16px;
  color: currentColor;
}

<div>
  <div
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="downshift-2-label"
    aria-owns="downshift-2-menu"
    class="pounce-17"
    role="combobox"
  >
    <div
      class="pounce-14"
    >
      <div
        aria-disabled="false"
        class="pounce-10"
      >
        <ul
          class="pounce-8"
        >
          <li
            class="pounce-2"
            role="tag"
          >
            Toyota
            <button
              aria-label="Remove"
              class="pounce-1"
              type="button"
            >
              <svg
                class="pounce-0"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41L17.59 5L12 10.59L6.41 5L5 6.41L10.59 12L5 17.59L6.41 19L12 13.41L17.59 19L19 17.59L13.41 12L19 6.41Z"
                />
              </svg>
            </button>
          </li>
          <li
            class="pounce-2"
            role="tag"
          >
            Ford
            <button
              aria-label="Remove"
              class="pounce-1"
              type="button"
            >
              <svg
                class="pounce-0"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41L17.59 5L12 10.59L6.41 5L5 6.41L10.59 12L5 17.59L6.41 19L12 13.41L17.59 19L19 17.59L13.41 12L19 6.41Z"
                />
              </svg>
            </button>
          </li>
          <li
            class="pounce-7"
          >
            <input
              aria-autocomplete="list"
              aria-controls="downshift-2-menu"
              aria-disabled="false"
              aria-invalid="false"
              aria-labelledby="downshift-2-label"
              aria-readonly="true"
              autocomplete="off"
              class="pounce-6"
              id="downshift-2-input"
              placeholder=""
              readonly=""
              type="text"
              value=""
            />
          </li>
        </ul>
        <label
          class="pounce-9"
          for="downshift-2-input"
          id="downshift-2-label"
        >
          Choose a car manufacturer
        </label>
      </div>
      <div
        class="pounce-13"
      >
        <button
          aria-label="Toggle Menu"
          aria-pressed="false"
          class="pounce-12"
          tabindex="-1"
          type="button"
        >
          <svg
            class="pounce-11"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 14L12 9L17 14H7Z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="pounce-30"
    >
      <ul
        aria-labelledby="downshift-2-label"
        class="pounce-15"
        id="downshift-2-menu"
        role="listbox"
      />
      <ul
        aria-labelledby="downshift-2-label"
        class="pounce-29"
        id="downshift-2-menu"
        role="listbox"
        style="transform: scale(1, 1); opacity: 1;"
      >
        <li
          class="pounce-20"
        >
          <button
            class="pounce-19"
            type="button"
          >
            <span
              class="pounce-18"
            >
              <svg
                class="pounce-16"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M12 2c5.523 0 10 4.477 10 10s-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2zm2.828 5.757L12 10.587l-2.828-2.83-1.415 1.415L10.587 12l-2.83 2.828 1.415 1.415L12 13.414l2.828 2.829 1.415-1.415L13.414 12l2.829-2.828-1.415-1.415z"
                />
              </svg>
              <span
                class="pounce-17"
              >
                Clear Selection
              </span>
            </span>
          </button>
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="pounce-21"
          id="downshift-2-item-0"
          role="option"
        >
          Toyota
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="pounce-21"
          id="downshift-2-item-1"
          role="option"
        >
          Ford
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="pounce-23"
          id="downshift-2-item-2"
          role="option"
        >
          Chevrolet
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="pounce-23"
          id="downshift-2-item-3"
          role="option"
        >
          BMW
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="pounce-23"
          id="downshift-2-item-4"
          role="option"
        >
          Mercedes
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="pounce-23"
          id="downshift-2-item-5"
          role="option"
        >
          Hammer
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="pounce-23"
          id="downshift-2-item-6"
          role="option"
        >
          Dodge
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="pounce-23"
          id="downshift-2-item-7"
          role="option"
        >
          Audi
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`MultiCombobox renders with variant="solid" 1`] = `


.pounce-8 {
  position: relative;
}

.pounce-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding-left: 12px;
  padding-right: 40px;
  padding-top: 19px;
  padding-bottom: 2px;
}

.pounce-1 {
  max-width: 100%;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  position: initial;
}

.pounce-0 {
  width: 100%;
  height: 100%;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 20px;
  padding-bottom: 8px;
  position: absolute;
  color: #F6F6F6;
  font-size: 0.875rem;
  font-weight: 500;
  background-color: transparent;
  border: 0;
  cursor: pointer;
  top: 0;
  left: 0;
}

.pounce-0::-webkit-input-placeholder {
  opacity: 0;
  color: #F6F6F6;
  -webkit-transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  font-weight: 500;
}

.pounce-0::-moz-placeholder {
  opacity: 0;
  color: #F6F6F6;
  -webkit-transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  font-weight: 500;
}

.pounce-0:-ms-input-placeholder {
  opacity: 0;
  color: #F6F6F6;
  -webkit-transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  font-weight: 500;
}

.pounce-0::placeholder {
  opacity: 0;
  color: #F6F6F6;
  -webkit-transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  font-weight: 500;
}



.pounce-0:focus::-webkit-input-placeholder {
  opacity: 0.4;
}

.pounce-0:focus::-moz-placeholder {
  opacity: 0.4;
}

.pounce-0:focus:-ms-input-placeholder {
  opacity: 0.4;
}

.pounce-0:focus::placeholder {
  opacity: 0.4;
}

.pounce-0:-webkit-autofill {
  -webkit-box-shadow: 0 0 0 30px #192231 inset;
  -webkit-text-fill-color: #F6F6F6;
  border-radius: 4px;
}

.pounce-3 {
  pointer-events: none;
  font-size: 0.875rem;
  padding-left: 16px;
  padding-right: 16px;
  color: #BDBDBD;
  top: 0;
  left: 0;
  position: absolute;
  transform-origin: center left;
  -webkit-transform: translate(0, 14px) scale(1);
  -moz-transform: translate(0, 14px) scale(1);
  -ms-transform: translate(0, 14px) scale(1);
  transform: translate(0, 14px) scale(1);
  -webkit-transition: -webkit-transform 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: transform 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  font-weight: 400;
}

.pounce-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 1;
  position: absolute;
  top: 0;
  bottom: 0;
  right: 8px;
  pointer-events: none;
}

.pounce-6 {
  outline: none;
  line-height: 1;
  border-radius: 4px;
  height: 32px;
  width: 32px;
  cursor: pointer;
  color: #F6F6F6;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: transparent;
  -webkit-transition: all 0.1s linear;
  transition: all 0.1s linear;
}

.pounce-6:focus {
  background-color: rgba(255,255,255,0.1);
}

.pounce-5 {
  display: inline-block;
  vertical-align: sub;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 20px;
  height: 20px;
  color: #FFFFFF;
}

.pounce-9 {
  max-height: 300px;
  max-width: 800px;
}

.pounce-10 {
  position: absolute;
  z-index: 10;
  left: 0px;
  top: 0px;
}

.pounce-4 {
  min-height: 47px;
  overflow: auto;
  position: relative;
  border: 1px solid;
  -webkit-transition: border-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: border-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  background-color: #23344E;
  border-radius: 4px;
  border-color: #23344E;
}

.pounce-4:hover {
  border-color: #0081C5;
}

.pounce-4:focus-within {
  border-color: #0081C5;
}

.pounce-4:focus-within span {
  opacity: 1;
  visibility: visible;
}

.pounce-4:focus-within label {
  font-weight: 500;
  -webkit-transform: translate(6px, 4px) scale(0.65);
  -moz-transform: translate(6px, 4px) scale(0.65);
  -ms-transform: translate(6px, 4px) scale(0.65);
  transform: translate(6px, 4px) scale(0.65);
}

<div>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-1-label"
    class="pounce-11"
    role="combobox"
  >
    <div
      class="pounce-8"
    >
      <div
        aria-disabled="false"
        class="pounce-4"
      >
        <ul
          class="pounce-2"
        >
          <li
            class="pounce-1"
          >
            <input
              aria-autocomplete="list"
              aria-disabled="false"
              aria-invalid="false"
              aria-labelledby="downshift-1-label"
              aria-readonly="true"
              autocomplete="off"
              class="pounce-0"
              id="downshift-1-input"
              placeholder="Select manufacturers"
              readonly=""
              type="text"
              value=""
            />
          </li>
        </ul>
        <label
          class="pounce-3"
          for="downshift-1-input"
          id="downshift-1-label"
        >
          Choose a car manufacturer
        </label>
      </div>
      <div
        class="pounce-7"
      >
        <button
          aria-label="Toggle Menu"
          aria-pressed="false"
          class="pounce-6"
          tabindex="-1"
          type="button"
        >
          <svg
            class="pounce-5"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10L12 15L17 10H7Z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="pounce-10"
    >
      <ul
        aria-labelledby="downshift-1-label"
        class="pounce-9"
        id="downshift-1-menu"
        role="listbox"
      />
    </div>
  </div>
</div>
`;
